Describe your changes here

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </header>
 
-    <!-- header section  -->
+    <!--     header section  -->
     <header class="p-6">
         <div class="lg:flex lg:items-center lg:justify-center lg:space-x-96">
             <!-- Image/ logo -->
@@ -100,79 +100,204 @@
     </header>
 
     <!-- hero section -->
+    <!-- desktop -->
     <section class="hidden lg:block">
         <div class="max-w-7xl mx-auto bg-blue-900 rounded-md shadow-md px-8 py-3 -mt-7 relative z-10">
-          <nav class="flex space-x-10 text-white font-medium items-center">
-            <a href="#" class="relative py-6 group">
-              HOME
-            </a>
-            <a href="#" class="relative py-6 group">
-              SCHEMES
-            </a>
-            <a href="#" class="relative py-6 group">
-                INVESTMENT
-              </a>
-              <a href="#" class="relative py-6 group">
-                MANAGEMENT
-              </a>
-              <a href="#" class="relative py-6 group">
-                ABOUT
-              </a>
-              <a href="#" class="relative py-6 group">
-                CAREERS
-              </a>
-              <a href="#" class="relative py-6 group">
-                NEWS & EVENTS
-              </a>
-          </nav>
+            <nav class="flex space-x-10 text-white font-medium items-center">
+                <a href="#" class="relative py-6 group">
+                    HOME
+                </a>
+                <a href="#" class="relative py-6 group">
+                    SCHEMES
+                </a>
+                <a href="#" class="relative py-6 group">
+                    INVESTMENT
+                </a>
+                <a href="#" class="relative py-6 group">
+                    MANAGEMENT
+                </a>
+                <a href="#" class="relative py-6 group">
+                    ABOUT
+                </a>
+                <a href="#" class="relative py-6 group">
+                    CAREERS
+                </a>
+                <a href="#" class="relative py-6 group">
+                    NEWS & EVENTS
+                </a>
+            </nav>
         </div>
-      </section>
+    </section>
 
-      <!-- content block -->
-       <section>
+    <!-- content block -->
+    <section>
         <div class="relative flex items-center max-w-7xl mx-auto px-8 py-16 mt-16 z-20 bg-white">
             <!-- Text content on left -->
-             <!-- destop text -->
+            <!-- destop text -->
             <div class="w-1/2 pr-8 hidden lg:block">
-              <h1 class="text-3xl font-thin mb-4">EJOHERA <span>Save</span> for a better future for you <br> and your family</h1>
-              <p class="text-2xl text-[#242E8F]">EJOHEZA</p>
-              <div class="mt-10">
-                <button class="font-bold bg-[#242E8F] text-white rounded-lg px-8 py-3 border border-transparent hover:bg-white hover:text-[#242E8F] hover:border-[#242E8F] transition-colors duration-300">
-                    Learn More
-                  </button>              
+                <h1 class="text-3xl font-thin mb-4">EJOHERA <span>Save</span> for a better future for you <br> and your
+                    family</h1>
+                <p class="text-2xl text-[#242E8F]">EJOHEZA</p>
+                <div class="mt-10">
+                    <button
+                        class="font-bold bg-[#242E8F] text-white rounded-lg px-8 py-3 border border-transparent hover:bg-white hover:text-[#242E8F] hover:border-[#242E8F] transition-colors duration-300">
+                        Learn More
+                    </button>
                 </div>
             </div>
             <!-- mobile text  -->
             <div class="block lg:hidden">
-                <h1 class="text-3xl font-thin mb-4">EJOHERA <span>Save</span> for a better future for you <br> and your family</h1>
-              <p class="text-2xl text-[#242E8F]">EJOHEZA</p>
-              <div class="mt-10">
-                <button class="font-bold bg-[#242E8F] text-white rounded-lg px-8 py-3 border border-transparent hover:bg-white hover:text-[#242E8F] hover:border-[#242E8F] transition-colors duration-300">
-                    Learn More
-                  </button>              
+                <h1 class="text-3xl font-thin mb-4">EJOHERA <span>Save</span> for a better future for you <br> and your
+                    family</h1>
+                <p class="text-2xl text-[#242E8F]">EJOHEZA</p>
+                <div class="mt-10">
+                    <button
+                        class="font-bold bg-[#242E8F] text-white rounded-lg px-8 py-3 border border-transparent hover:bg-white hover:text-[#242E8F] hover:border-[#242E8F] transition-colors duration-300">
+                        Learn More
+                    </button>
                 </div>
             </div>
-          
+
             <!-- Image on right -->
             <div class="w-1/2 hidden lg:block">
-              <img
-                src="Images/smiling couple.jpeg"
-                alt="Smiling couple"
-                class="w-full object-cover"
-                style="mask-image: linear-gradient(to left, rgba(0,0,0,1), rgba(0,0,0,0)); -webkit-mask-image: linear-gradient(to left, rgba(0,0,0,1), rgba(0,0,0,0));"
-              />
+                <img src="Images/smiling couple.jpeg" alt="Smiling couple" class="w-full object-cover"
+                    style="mask-image: linear-gradient(to left, rgba(0,0,0,1), rgba(0,0,0,0)); -webkit-mask-image: linear-gradient(to left, rgba(0,0,0,1), rgba(0,0,0,0));" />
             </div>
-          </div>
-       </section>
+        </div>
+    </section>
 
-       <!-- info page -->
-        <section>
-            <div>
-                <div>
-                    img
+    <!-- info page -->
+    <section>
+        <!-- Desktop-->
+        <div class="hidden lg:flex items-stretch justify-center max-w-7xl mx-auto px-8">
+            <div
+                class="flex-1 max-w-[14rem] px-2 py-4 bg-white rounded-md shadow-md transition-transform duration-300 hover:-translate-y-2 cursor-pointer border flex flex-col">
+                <img src="Images/icon1.png" class="w-10 ml-3 mb-3" alt="Icon" />
+                <h1 class="mb-1 text-lg font-semibold">MemberFirst</h1>
+                <p class="text-[12px] leading-tight">
+                    <span class="font-bold text-[#242e8f]">13 Million </span>of Rwandans <br />are covered by RSSB
+                    services
+                </p>
+            </div>
+            <div
+                class="flex-1 max-w-[14rem] px-2 py-4 bg-white rounded-md shadow-md transition-transform duration-300 hover:-translate-y-2 cursor-pointer border flex flex-col">
+                <img src="Images/icons2.png" class="w-10 ml-3 mb-3" alt="Icon" />
+                <h1 class="mb-1 text-lg font-semibold">Experience</h1>
+                <p class="text-[12px] leading-tight">
+                    <span class="font-bold text-[#242e8f]">60 years </span>of service for your <br /> safety and
+                    well-being.
+                </p>
+            </div>
+            <div
+                class="flex-1 max-w-[14rem] px-2 py-4 bg-white rounded-md shadow-md transition-transform duration-300 hover:-translate-y-2 cursor-pointer border flex flex-col">
+                <img src="Images/icons3.png" class="w-10 ml-3 mb-3" alt="Icon" />
+                <h1 class="mb-1 text-lg font-semibold">Branches</h1>
+                <p class="text-[12px] leading-tight">
+                    Our services decentralized in <br />
+                    <span class="font-bold text-[#242e8f]">30 branches </span>for you satisfaction
+                </p>
+            </div>
+            <div
+                class="flex-1 max-w-[14rem] px-2 py-4 bg-white rounded-md shadow-md transition-transform duration-300 hover:-translate-y-2 cursor-pointer border flex flex-col">
+                <img src="Images/icons4.png" class="w-10 ml-3 mb-3" alt="Icon" />
+                <h1 class="mb-1 text-lg font-semibold">Experience</h1>
+                <p class="text-[12px] leading-tight">
+                    Learning from our data to <br /> improving the services offered <br />to our members
+                </p>
+            </div>
+        </div>
+
+        <!-- Mobile -->
+        <div class="flex lg:hidden overflow-x-auto max-w-full">
+            <div class="flex flex-nowrap">
+                <div
+                    class="flex-none max-w-[14rem] px-2 py-4 bg-white rounded-md shadow-md transition-transform duration-300 hover:-translate-y-2 cursor-pointer border flex flex-col">
+                    <img src="Images/icon1.png" class="w-10 ml-3 mb-3" alt="Icon" />
+                    <h1 class="mb-1 text-lg font-semibold">MemberFirst</h1>
+                    <p class="text-[12px] leading-tight">
+                        <span class="font-bold text-[#242e8f]">13 Million </span>of Rwandans <br />are covered by RSSB
+                        services
+                    </p>
+                </div>
+                <div
+                    class="flex-none max-w-[14rem] px-2 py-4 bg-white rounded-md shadow-md transition-transform duration-300 hover:-translate-y-2 cursor-pointer border flex flex-col">
+                    <img src="Images/icons2.png" class="w-10 ml-3 mb-3" alt="Icon" />
+                    <h1 class="mb-1 text-lg font-semibold">Experience</h1>
+                    <p class="text-[12px] leading-tight">
+                        <span class="font-bold text-[#242e8f]">60 years </span>of service for your <br /> safety and
+                        well-being.
+                    </p>
+                </div>
+                <div
+                    class="flex-none max-w-[14rem] px-2 py-4 bg-white rounded-md shadow-md transition-transform duration-300 hover:-translate-y-2 cursor-pointer border flex flex-col">
+                    <img src="Images/icons3.png" class="w-10 ml-3 mb-3" alt="Icon" />
+                    <h1 class="mb-1 text-lg font-semibold">Branches</h1>
+                    <p class="text-[12px] leading-tight">
+                        Our services decentralized in <br />
+                        <span class="font-bold text-[#242e8f]">30 branches </span>for you satisfaction
+                    </p>
+                </div>
+                <div
+                    class="flex-none max-w-[14rem] px-2 py-4 bg-white rounded-md shadow-md transition-transform duration-300 hover:-translate-y-2 cursor-pointer border flex flex-col">
+                    <img src="Images/icons4.png" class="w-10 ml-3 mb-3" alt="Icon" />
+                    <h1 class="mb-1 text-lg font-semibold">Experience</h1>
+                    <p class="text-[12px] leading-tight">
+                        Learning from our data to <br /> improving the services offered <br />to our members
+                    </p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+
+    <!-- schemes  -->
+    <section>
+        <div class="w-full text-center px-6 py-8">
+            <div class="flex flex-col space-y-3 justify-center items-center max-w-4xl mx-auto">
+                <h1 class="font-bold text-3xl text-[#4b5563] leading-snug">
+                    Optimistic and forward-looking agent of central government, working to achieve
+                </h1>
+                <h2 class="text-[#242e8f] font-bold text-3xl leading-snug">
+                    the financial security and health of all Rwandans.
+                </h2>
+            </div>
+        </div>
+
+        <div class="flex justify-center">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 place-items-center">
+              <div class="w-72 h-72 bg-white rounded-md shadow-lg px-7 py-9 flex flex-col items-center justify-center">
+                <img src="Images/icons 1.svg" alt="Icon" class="w-16 h-16 mb-4 object-contain">
+                <h1>PENSION SCHEME</h1>
+                <p>Retire With Dignity</p>
+              </div>
+              <div class="w-72 h-72 bg-white rounded-md shadow-lg px-7 py-9 flex flex-col items-center justify-center">
+                <img src="Images/icons 2.svg" alt="Icon" class="w-16 h-16 mb-4 object-contain">
+                <h1>OCCUPATIONAL<br>HAZARDS</h1>
+                <p>We Are Here For You</p>
+              </div>
+              <div class="w-72 h-72 bg-white rounded-md shadow-lg px-7 py-9 flex flex-col items-center justify-center">
+                <img src="Images/icons 3.svg" alt="Icon" class="w-16 h-16 mb-4 object-contain">
+                <h1>MEDICAL SCHEME</h1>
+                <p>Our Health, Our Future</p>
+              </div>
+              <div class="w-72 h-72 bg-white rounded-md shadow-lg px-7 py-9 flex flex-col items-center justify-center">
+                <img src="Images/icons 4.svg" alt="Icon" class="w-16 h-16 mb-4 object-contain">
+                <h1>CBHI SCHEME</h1>
+                <p>Giving Your Happiness At Best Rate</p>
+              </div>
+              <div class="w-72 h-72 bg-white rounded-md shadow-lg px-7 py-9 flex flex-col items-center justify-center">
+                <img src="Images/icons 5.svg" alt="Icon" class="w-16 h-16 mb-4 object-contain">
+                <h1>EJOHEZA</h1>
+                <p>Start Early Reap The Reward</p>
+              </div>
+              <div class="w-72 h-72 bg-white rounded-md shadow-lg px-7 py-9 flex flex-col items-center justify-center">
+                <img src="Images/icons 6.svg" alt="Icon" class="w-16 h-16 mb-4 object-contain">
+                <h1>MATERNITY LEAVE</h1>
+                <p>Enjoy Your Maternity Leave With Full Salary</p>
+              </div>
+            </div>
+          </div>
+        
+    </section>
 </body>
 
 </html>
