--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
 
 
 
-                <div class="grid grid-cols-1 lg:grid-cols-3 lg:pl-32 pt-10 text-[#4b5563]">
-                    <div class="flex flex-col ml-5 gap-5 mb-5">
+                <div class="grid grid-cols-1 lg:grid-cols-3 lg:pl-20 pt-10 text-[#4b5563]">
+                    <div class="flex flex-col gap-5 mb-5">
                         <img src="Images/change1.png" class="w-[90px] object-contain">
                         <h1 class="font-bold text-2xl">Changing from Legacy processes and systems</h1>
                         <p class="text-xl">
